PA 2.1: Accomplish 2.1 - Finish base instrcutions in RISCV32I and RISCV32M.

--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -221,3 +221,10 @@ config SCAN_WATCHPOINT
     default y
     help
       Enable this switch to set macro variable CONFIG_SCAN_WATCHPOINT to 1.
+
+config PRINT_MAKETOKEN
+    bool "Print maketoken"
+    default y
+    help
+      Enable this switch to set macro variable CONFIG_PRINT_MAKETOKEN to 1.
+    
