--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -169,6 +169,11 @@ config MTRACE
   bool "Enable memory trace"
   default y
 
+config FTRACE
+  depends on TRACE && TARGET_NATIVE_ELF && ENGINE_INTERPRETER
+  bool "Enable function trace"
+  default y
+
   choice
   prompt "Reference design"
   default DIFFTEST_REF_SPIKE if ISA_riscv
