--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -174,6 +174,11 @@ config FTRACE
   bool "Enable function trace"
   default y
 
+config DTRACE
+  depends on TRACE && TARGET_NATIVE_ELF && ENGINE_INTERPRETER
+  bool "Enable device trace"
+  default y
+
   choice
   prompt "Reference design"
   default DIFFTEST_REF_SPIKE if ISA_riscv
