--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -179,6 +179,11 @@ config DTRACE
   bool "Enable device trace"
   default y
 
+config ETRACE
+  depends on TRACE && TARGET_NATIVE_ELF && ENGINE_INTERPRETER
+  bool "Enable Ecall trace"
+  default y
+
   choice
   prompt "Reference design"
   default DIFFTEST_REF_SPIKE if ISA_riscv
