PA 3.2: Accomplish the PA 3.2 and Implement output from the OS.

--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -183,6 +183,11 @@ config ETRACE
   depends on TRACE && TARGET_NATIVE_ELF && ENGINE_INTERPRETER
   bool "Enable Ecall trace"
   default y
+  
+# config STRACE
+#   depends on TRACE && TARGET_NATIVE_ELF && ENGINE_INTERPRETER
+#   bool "Enable syscall trace in nanos!"
+#   default y
 
   choice
   prompt "Reference design"
